# TensorRT

./: MODULE.bazel  pyproject.toml
examples/distributed_inference/: tensor_parallel_simple_example.py
examples/distributed_inference/plugins/: CMakeLists.txt  README.md
examples/distributed_inference/plugins/api/: tllmPlugin.cpp  tllmPlugin.h
examples/distributed_inference/plugins/common/: CMakeLists.txt  allocator.h  arrayView.h  assert.cpp  assert.h  common.h  cublasMMWrapper.cpp  cublasMMWrapper.h  cublasVersionCheck.h  cudaBf16Fallbacks.cuh  cudaDriverWrapper.cpp  cudaDriverWrapper.h  cudaFp8Utils.cu  cudaFp8Utils.h  cudaTypeUtils.cuh  cudaUtils.h  customAllReduceUtils.h  dataType.h  envUtils.cpp  envUtils.h  iBuffer.cpp  iBuffer.h  iTensor.h  logger.cpp  logger.h  memoryUtils.cu  memoryUtils.h  mpiUtils.cpp  mpiUtils.h  multiDeviceUtils.h  nvtxUtils.h  quantization.h  reduceKernelUtils.cuh  stlUtils.h  stringUtils.cpp  stringUtils.h  tensor.cpp  tensor.h  tensorConversion.h  tllmBuffers.h  (+5 more)
examples/distributed_inference/plugins/kernels/: customAllReduceKernels.cu  customAllReduceKernels.h
examples/distributed_inference/plugins/ncclPlugin/: allgatherPlugin.cpp  allgatherPlugin.h  allreducePlugin.cpp  allreducePlugin.h
examples/distributed_inference/plugins/plugins_common/: CMakeLists.txt  checkMacrosPlugin.cpp  checkMacrosPlugin.h  plugin.cpp  plugin.h
py/torch_tensorrt/dynamo/conversion/: _TRTInterpreter.py  aten_ops_converters.py
py/torch_tensorrt/dynamo/conversion/impl/: quantize.py
py/torch_tensorrt/dynamo/conversion/impl/normalization/: ops.py
py/torch_tensorrt/dynamo/lowering/: _decompositions.py
tests/py/dynamo/models/: test_models_export.py
